bug fixed
skill implementiert